fixed overlapping.

--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,13 @@ body {
 }
 .container {
   display: flex;
-  align-items: center;
+ 
 }
 
 .section1 {
   background-image: url(../img/background.png);
   background-position: center;
   width: 50%;
-  height: 100vh;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
@@ -34,7 +33,7 @@ body {
 .section2 {
   /* background: black; */
   width: 50%;
-  height: 100vh;
+  height: 75vh;
   color: white;
 }
 
@@ -62,6 +61,7 @@ body {
 .box1 h2 {
   margin: 20px 20px;
   font-size: 32px;
+  text-align: center;
   font-weight: 900;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -71,6 +71,7 @@ body {
 
 .box2 {
   display: flex;
+  justify-content: center;
 }
 button {
   color: black;
@@ -127,7 +128,6 @@ hr.dotted {
 
 .email {
   width: 250px;
-  margin-left: 160px;
   display: inline-block;
   color: white;
   padding: 10px 0px;
@@ -234,7 +234,7 @@ span:hover {
 .Phone {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   justify-content: center;
 }
 
@@ -283,19 +283,15 @@ span:hover {
 }
 
 /*FOR Tab*/
-@media screen and (max-width: 820px) {
+@media (min-width:481px) and (max-width: 768px) {
   .container {
     flex-direction: column-reverse;
-    gap:0;
   }
 
-  .section2{
-    width: 100vw;
-  }
-  .section1 {
+  .section1,
+  .section2 {
     width: 100%;
-    height: 45vh;
-    overflow: hidden;
+    min-height: 45vh;
   }
 
   .section1 {
@@ -328,20 +324,24 @@ span:hover {
   }
 }
 
-@media screen and (max-width: 1140px) {
+@media (min-width:769px)and (max-width: 1140px) {
   .Phone {
     align-items: center;
   }
+  .section2{
+    height: 100%;
+  }
 
-  .Phone p, .email, .account {
+
+  .Phone p,
+  .email,
+  .account {
     margin-left: auto;
     margin-right: auto;
   }
 }
 
 /*HUBS*/
-
-
 
 /* COLOR TOGGLE */
 
@@ -354,7 +354,7 @@ span:hover {
   right: 1.5rem;
   border-radius: 50%;
   z-index: 2000;
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, );
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0);
   text-align: center;
   cursor: pointer;
 }
@@ -368,13 +368,23 @@ span:hover {
   color: black !important;
 }
 
-.black{
+.black {
   color: black;
 }
-.blue{
+.blue {
   background-color: rgb(29, 155, 240);
 }
-.invert{
+.invert {
   filter: invert(1);
 }
 
+@media (min-width:1141px)and (max-width: 1700px) {
+ 
+  .heading1 {
+    font-size: 35px !important;
+  }
+  .heading2 {
+    font-size: 25px !important;
+  }
+ 
+}
